[package]
name = "pwiki-api"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.11.0"
serde = { version = "1.0.67", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }